--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-green: #4CAF50; /* Un verde vibrante, puedes ajustarlo */
+     --primary-gold: #696254; /* Un oro brillante, puedes ajustarlo */
     --dark-green: #388E3C;   /* Un verde más oscuro para hover */
     --light-green: #C8E6C9;  /* Un verde muy claro para fondos sutiles */
 
