--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -21,36 +21,40 @@
     max-width: 500px;
 }
 
-.header-content h1 {
+.header-content h2 {
+    font-family: 'Arial', sans-serif;   
     font-size: 3em;
-    color: #000000;
-    margin-bottom: 10px;
-}
-
-.header-content p {
-    font-size: 1.2em;
-    color: #080808;
+    color: #e4b312;
     margin-bottom: 30px;
 }
 
+.header-content p {
+    font-size: 2.5em;
+    color: #080808;
+    margin-bottom: 60px;
+}
+
 .img-tarjeta12{
-    width: 500px;
-border-radius: 60px;
+    width: 900px;
+    height: 700px;
+    margin-right: 50px;
+    border-radius: 200px;
 }
 
 .header-buttons .btn {
-    padding: 12px 25px;
+    padding: 20px 50px ;
     border: none;
     border-radius: 50px;
-    font-size: 1em;
+    font-size: 2em;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-right: 15px;
+    margin-right: 50px;
+    width: 600px;
 }
 
 .primary-btn {
     background-color:#60dd86; 
-    color: white;
+    color: #d68010d8;
 }
 
 .primary-btn:hover {
