--- a/src/Styles/FeaturesGrid.css
+++ b/src/Styles/FeaturesGrid.css
@@ -1,4 +1,4 @@
-/* src/components/FeaturesGrid/FeaturesGrid.css */
+
 .features-section {
     padding: 60px 40px;
     text-align: center;
@@ -21,20 +21,20 @@
 }
 
 .feature-item {
-    background-color: var(--white); /* Fondo blanco para cada tarjeta */
+    background-color: var(--background-dark-grey); /* Fondo blanco para cada tarjeta */
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 120px; /* Altura fija para uniformidad */
+    height: 120px; 
 }
 
 .feature-icon-wrapper {
-    width: 48px; /* Tamaño del wrapper del icono */
+    width: 48px; 
     height: 48px;
     border-radius: 50%;
     background-color: var(--light-green); /* Fondo verde claro para el círculo del icono */
@@ -51,9 +51,9 @@
 }
 
 .feature-item h3 {
-    font-size: 1.1em;
-    color: var(--text-dark);
-    margin: 0; /* Elimina margen superior por defecto */
+    font-size: 1.5em;
+    color: var(--primary-green);
+    margin: 0; 
 }
 
 /* Media Queries para responsividad */
